@@ -12,7 +12,7 @@ public class QuestionConverterImpl implements QuestionConverter {
     public String convertQuestionToString(Question question) {
         StringBuilder builder = new StringBuilder();
 
-        builder.append(String.format("%s\n", question.text()));
+        builder.append("%s\n".formatted(question.text()));
 
         IntStream.range(0, question.answers().size())
                 .forEach(i -> builder.append(
